// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress render dashboard 295 gapDegree 1`] = `
<div
  class="progress progress-circle progress-status-normal"
>
  <div
    class="bordered"
  >
    <div
      class="progress-inner"
      style="width: 120px; height: 120px; font-size: 22px;"
    >
      <svg
        class="progress-circle"
        viewBox="0 0 100 100"
      >
        <circle
          class="progress-circle-trail"
          cx="50"
          cy="50"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke-dasharray: 56.72320068981571px 314.1592653589793; stroke-dashoffset: 0; transform: rotate(237.5deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
        />
        <circle
          class="progress-circle-path"
          cx="50"
          cy="50"
          opacity="0"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke-dasharray: 56.72320068981571px 314.1592653589793; stroke-dashoffset: 56.72320068981571; transform: rotate(237.5deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
        <circle
          class="progress-circle-path"
          cx="50"
          cy="50"
          opacity="0"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke: var(--progress-success-background-color); stroke-dasharray: 56.72320068981571px 314.1592653589793; stroke-dashoffset: 56.72320068981571; transform: rotate(237.5deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
      </svg>
    </div>
  </div>
  <span
    class="progress-text"
    title="0%"
  >
    0%
  </span>
</div>
`;

exports[`Progress render dashboard 296 gapDegree 1`] = `
<div
  class="progress progress-circle progress-status-normal"
>
  <div
    class="bordered"
  >
    <div
      class="progress-inner"
      style="width: 120px; height: 120px; font-size: 22px;"
    >
      <svg
        class="progress-circle"
        viewBox="0 0 100 100"
      >
        <circle
          class="progress-circle-trail"
          cx="50"
          cy="50"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke-dasharray: 55.85053606381855px 314.1592653589793; stroke-dashoffset: 0; transform: rotate(238deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
        />
        <circle
          class="progress-circle-path"
          cx="50"
          cy="50"
          opacity="0"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke-dasharray: 55.85053606381855px 314.1592653589793; stroke-dashoffset: 55.85053606381855; transform: rotate(238deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
        <circle
          class="progress-circle-path"
          cx="50"
          cy="50"
          opacity="0"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke: var(--progress-success-background-color); stroke-dasharray: 55.85053606381855px 314.1592653589793; stroke-dashoffset: 55.85053606381855; transform: rotate(238deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
      </svg>
    </div>
  </div>
  <span
    class="progress-text"
    title="0%"
  >
    0%
  </span>
</div>
`;

exports[`Progress render dashboard zero gapDegree 1`] = `
<div
  class="progress progress-circle progress-status-normal"
>
  <div
    class="bordered"
  >
    <div
      class="progress-inner"
      style="width: 120px; height: 120px; font-size: 22px;"
    >
      <svg
        class="progress-circle"
        viewBox="0 0 100 100"
      >
        <circle
          class="progress-circle-trail"
          cx="50"
          cy="50"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke-dasharray: 314.1592653589793px 314.1592653589793; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
        />
        <circle
          class="progress-circle-path"
          cx="50"
          cy="50"
          opacity="0"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke-dasharray: 314.1592653589793px 314.1592653589793; stroke-dashoffset: 314.1592653589793; transform: rotate(-90deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
        <circle
          class="progress-circle-path"
          cx="50"
          cy="50"
          opacity="0"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke: var(--progress-success-background-color); stroke-dasharray: 314.1592653589793px 314.1592653589793; stroke-dashoffset: 314.1592653589793; transform: rotate(-90deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
      </svg>
    </div>
  </div>
  <span
    class="progress-text"
    title="0%"
  >
    0%
  </span>
</div>
`;

exports[`Progress render format 1`] = `
<div
  class="progress progress-line progress-status-normal"
>
  <div
    class="progress-outer"
  >
    <div
      class="progress-inner bordered"
    >
      <div
        class="progress-bg"
        style="width: 50%; height: 6px;"
      />
      <div
        class="progress-success-bg"
        style="width: 10%; height: 6px;"
      />
    </div>
  </div>
  <div
    class="progress-text-wrapper"
  >
    <span
      class="extremity-label min-label progress-text"
    >
      50 10
    </span>
    <span
      class="extremity-label max-label progress-text"
    >
      100%
    </span>
    <span
      class="value-label progress-text"
    />
    <span
      class="value-label progress-text"
    />
  </div>
</div>
`;

exports[`Progress render negative progress 1`] = `
<div
  class="progress progress-line progress-status-normal"
>
  <div
    class="progress-outer"
  >
    <div
      class="progress-inner bordered"
    >
      <div
        class="progress-bg"
        style="width: 0%; height: 6px;"
      />
    </div>
  </div>
  <div
    class="progress-text-wrapper"
  >
    <span
      class="extremity-label min-label progress-text"
    >
      0%
    </span>
    <span
      class="extremity-label max-label progress-text"
    >
      100%
    </span>
    <span
      class="value-label progress-text"
    />
    <span
      class="value-label progress-text"
    />
  </div>
</div>
`;

exports[`Progress render negative successPercent 1`] = `
<div
  class="progress progress-line progress-status-normal"
>
  <div
    class="progress-outer"
  >
    <div
      class="progress-inner bordered"
    >
      <div
        class="progress-bg"
        style="width: 50%; height: 6px;"
      />
      <div
        class="progress-success-bg"
        style="width: 0%; height: 6px;"
      />
    </div>
  </div>
  <div
    class="progress-text-wrapper"
  >
    <span
      class="extremity-label min-label progress-text"
    >
      50%
    </span>
    <span
      class="extremity-label max-label progress-text"
    >
      100%
    </span>
    <span
      class="value-label progress-text"
    />
    <span
      class="value-label progress-text"
    />
  </div>
</div>
`;

exports[`Progress render normal progress 1`] = `
<div
  class="progress progress-line progress-status-normal"
>
  <div
    class="progress-outer"
  >
    <div
      class="progress-inner bordered"
    >
      <div
        class="progress-bg"
        style="width: 0%; height: 6px;"
      />
    </div>
  </div>
  <div
    class="progress-text-wrapper"
  >
    <span
      class="extremity-label min-label progress-text"
    >
      0%
    </span>
    <span
      class="extremity-label max-label progress-text"
    >
      100%
    </span>
    <span
      class="value-label progress-text"
    />
    <span
      class="value-label progress-text"
    />
  </div>
</div>
`;

exports[`Progress render out-of-range progress 1`] = `
<div
  class="progress progress-line progress-status-success"
>
  <div
    class="progress-outer"
  >
    <div
      class="progress-inner bordered"
    >
      <div
        class="progress-bg"
        style="width: 100%; height: 6px;"
      />
    </div>
  </div>
  <div
    class="progress-text-wrapper"
  >
    <span
      class="extremity-label min-label progress-text"
    >
      <span
        class="progress-icon icon-wrapper"
        role="presentation"
      >
        <svg
          role="presentation"
          style="width: 16px; height: 16px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
            style="fill: var(--progress-success-text-color);"
          />
        </svg>
      </span>
    </span>
    <span
      class="extremity-label max-label progress-text"
    >
      100%
    </span>
    <span
      class="value-label progress-text"
    />
    <span
      class="value-label progress-text"
    />
  </div>
</div>
`;

exports[`Progress render out-of-range progress with info 1`] = `
<div
  class="progress progress-line progress-status-success"
>
  <div
    class="progress-outer"
  >
    <div
      class="progress-inner bordered"
    >
      <div
        class="progress-bg"
        style="width: 100%; height: 6px;"
      />
    </div>
  </div>
  <div
    class="progress-text-wrapper"
  >
    <span
      class="extremity-label min-label progress-text"
    >
      <span
        class="progress-icon icon-wrapper"
        role="presentation"
      >
        <svg
          role="presentation"
          style="width: 16px; height: 16px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M12 20C7.59 20 4 16.41 4 12S7.59 4 12 4 20 7.59 20 12 16.41 20 12 20M16.59 7.58L10 14.17L7.41 11.59L6 13L10 17L18 9L16.59 7.58Z"
            style="fill: var(--progress-success-text-color);"
          />
        </svg>
      </span>
    </span>
    <span
      class="extremity-label max-label progress-text"
    >
      100%
    </span>
    <span
      class="value-label progress-text"
    />
    <span
      class="value-label progress-text"
    />
  </div>
</div>
`;

exports[`Progress render strokeColor 1`] = `
<div
  class="progress progress-circle progress-status-normal"
>
  <div
    class="bordered"
  >
    <div
      class="progress-inner"
      style="width: 120px; height: 120px; font-size: 22px;"
    >
      <svg
        class="progress-circle"
        viewBox="0 0 100 100"
      >
        <circle
          class="progress-circle-trail"
          cx="50"
          cy="50"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke-dasharray: 314.1592653589793px 314.1592653589793; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
        />
        <circle
          class="progress-circle-path"
          cx="50"
          cy="50"
          opacity="1"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke: red; stroke-dasharray: 314.1592653589793px 314.1592653589793; stroke-dashoffset: 157.07963267948966; transform: rotate(-90deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
        <circle
          class="progress-circle-path"
          cx="50"
          cy="50"
          opacity="0"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke: var(--progress-success-background-color); stroke-dasharray: 314.1592653589793px 314.1592653589793; stroke-dashoffset: 314.1592653589793; transform: rotate(-90deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
      </svg>
    </div>
  </div>
  <span
    class="progress-text"
    title="50%"
  >
    50%
  </span>
</div>
`;

exports[`Progress render strokeColor 2`] = `
<div
  class="progress progress-line progress-status-normal"
>
  <div
    class="progress-outer"
  >
    <div
      class="progress-inner bordered"
    >
      <div
        class="progress-bg"
        style="width: 50%; height: 6px;"
      />
    </div>
  </div>
  <div
    class="progress-text-wrapper"
  >
    <span
      class="extremity-label min-label progress-text"
    >
      50%
    </span>
    <span
      class="extremity-label max-label progress-text"
    >
      100%
    </span>
    <span
      class="value-label progress-text"
    />
    <span
      class="value-label progress-text"
    />
  </div>
</div>
`;

exports[`Progress render strokeColor 3`] = `
<div
  class="progress progress-line progress-status-normal"
>
  <div
    class="progress-outer"
  >
    <div
      class="progress-inner bordered"
    >
      <div
        class="progress-bg"
        style="width: 50%; height: 6px;"
      />
    </div>
  </div>
  <div
    class="progress-text-wrapper"
  >
    <span
      class="extremity-label min-label progress-text"
    >
      50%
    </span>
    <span
      class="extremity-label max-label progress-text"
    >
      100%
    </span>
    <span
      class="value-label progress-text"
    />
    <span
      class="value-label progress-text"
    />
  </div>
</div>
`;

exports[`Progress render successColor progress 1`] = `
<div
  class="progress progress-line progress-status-normal"
>
  <div
    class="progress-outer"
  >
    <div
      class="progress-inner bordered"
    >
      <div
        class="progress-bg"
        style="width: 60%; height: 6px;"
      />
      <div
        class="progress-success-bg"
        style="width: 30%; height: 6px; background: rgb(255, 255, 255);"
      />
    </div>
  </div>
  <div
    class="progress-text-wrapper"
  >
    <span
      class="extremity-label min-label progress-text"
    >
      60%
    </span>
    <span
      class="extremity-label max-label progress-text"
    >
      100%
    </span>
    <span
      class="value-label progress-text"
    />
    <span
      class="value-label progress-text"
    />
  </div>
</div>
`;

exports[`Progress render successColor progress type="circle" 1`] = `
<div
  class="progress progress-circle progress-status-normal"
>
  <div
    class="bordered"
  >
    <div
      class="progress-inner"
      style="width: 120px; height: 120px; font-size: 22px;"
    >
      <svg
        class="progress-circle"
        viewBox="0 0 100 100"
      >
        <circle
          class="progress-circle-trail"
          cx="50"
          cy="50"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke-dasharray: 314.1592653589793px 314.1592653589793; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
        />
        <circle
          class="progress-circle-path"
          cx="50"
          cy="50"
          opacity="1"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke-dasharray: 314.1592653589793px 314.1592653589793; stroke-dashoffset: 219.9114857512855; transform: rotate(18deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
        <circle
          class="progress-circle-path"
          cx="50"
          cy="50"
          opacity="1"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke: #ffffff; stroke-dasharray: 314.1592653589793px 314.1592653589793; stroke-dashoffset: 219.9114857512855; transform: rotate(-90deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
      </svg>
    </div>
  </div>
  <span
    class="progress-text"
    title="60%"
  >
    60%
  </span>
</div>
`;

exports[`Progress render successColor progress type="dashboard" 1`] = `
<div
  class="progress progress-circle progress-status-normal"
>
  <div
    class="bordered"
  >
    <div
      class="progress-inner"
      style="width: 120px; height: 120px; font-size: 22px;"
    >
      <svg
        class="progress-circle"
        viewBox="0 0 100 100"
      >
        <circle
          class="progress-circle-trail"
          cx="50"
          cy="50"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke-dasharray: 248.70941840919195px 314.1592653589793; stroke-dashoffset: 0; transform: rotate(127.5deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
        />
        <circle
          class="progress-circle-path"
          cx="50"
          cy="50"
          opacity="1"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke-dasharray: 248.70941840919195px 314.1592653589793; stroke-dashoffset: 174.09659288643437; transform: rotate(213deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
        <circle
          class="progress-circle-path"
          cx="50"
          cy="50"
          opacity="1"
          r="50"
          stroke-linecap="butt"
          stroke-width="62.5"
          style="stroke: #ffffff; stroke-dasharray: 248.70941840919195px 314.1592653589793; stroke-dashoffset: 174.09659288643437; transform: rotate(127.5deg); transform-origin: 50% 50%; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
      </svg>
    </div>
  </div>
  <span
    class="progress-text"
    title="60%"
  >
    60%
  </span>
</div>
`;

exports[`Progress render trailColor progress 1`] = `
<div
  class="progress progress-line progress-status-normal"
>
  <div
    class="progress-outer"
  >
    <div
      class="progress-inner bordered"
      style="background: rgb(255, 255, 255);"
    >
      <div
        class="progress-bg"
        style="width: 0%; height: 6px;"
      />
    </div>
  </div>
  <div
    class="progress-text-wrapper"
  >
    <span
      class="extremity-label min-label progress-text"
    >
      0%
    </span>
    <span
      class="extremity-label max-label progress-text"
    >
      100%
    </span>
    <span
      class="value-label progress-text"
    />
    <span
      class="value-label progress-text"
    />
  </div>
</div>
`;

exports[`Progress should support pill variant 1`] = `
<div
  class="progress progress-line progress-status-normal"
>
  <div
    class="progress-outer progress-outer-pill"
  >
    <div
      class="progress-inner bordered"
    >
      <div
        class="progress-bg"
        style="width: 20%; height: 6px;"
      />
    </div>
  </div>
  <div
    class="progress-text-wrapper"
  >
    <span
      class="extremity-label min-label progress-text"
    >
      20%
    </span>
    <span
      class="extremity-label max-label progress-text"
    >
      100%
    </span>
    <span
      class="value-label progress-text"
    />
    <span
      class="value-label progress-text"
    />
  </div>
</div>
`;

exports[`Progress should support steps 1`] = `
<div
  class="progress progress-steps progress-status-normal"
>
  <div
    class="progress-steps-outer"
  >
    <div
      class="progress-steps-item bordered"
      style="width: 0px; height: 6px;"
    />
    <div
      class="progress-steps-item bordered"
      style="width: 0px; height: 6px;"
    />
    <div
      class="progress-steps-item bordered"
      style="width: 0px; height: 6px;"
    />
  </div>
  <div
    class="progress-text-wrapper"
  >
    <span
      class="extremity-label min-label progress-text"
    >
      0%
    </span>
    <span
      class="extremity-label max-label progress-text"
    >
      100%
    </span>
    <span
      class="value-label progress-text"
    />
    <span
      class="value-label progress-text"
    />
  </div>
</div>
`;

exports[`Progress steps should have default percent 0 1`] = `
<div
  class="progress-steps-outer"
/>
`;

exports[`Progress steps should support pill variant 1`] = `
<div
  class="progress progress-steps progress-status-normal"
>
  <div
    class="progress-steps-outer progress-steps-outer-pill"
  >
    <div
      class="progress-steps-item bordered progress-steps-item-active"
      style="width: 0px; height: 6px;"
    />
    <div
      class="progress-steps-item bordered"
      style="background: rgb(24, 144, 238); border-color: #1890ee; width: 0px; height: 6px;"
    />
    <div
      class="progress-steps-item bordered"
      style="background: rgb(24, 144, 238); border-color: #1890ee; width: 0px; height: 6px;"
    />
    <div
      class="progress-steps-item bordered"
      style="background: rgb(24, 144, 238); border-color: #1890ee; width: 0px; height: 6px;"
    />
    <div
      class="progress-steps-item bordered"
      style="background: rgb(24, 144, 238); border-color: #1890ee; width: 0px; height: 6px;"
    />
  </div>
  <div
    class="progress-text-wrapper"
  >
    <span
      class="extremity-label min-label progress-text"
    >
      20%
    </span>
    <span
      class="extremity-label max-label progress-text"
    >
      100%
    </span>
    <span
      class="value-label progress-text"
    />
    <span
      class="value-label progress-text"
    />
  </div>
</div>
`;
